--- a/app/src/main/res/menu/code_editor_menu.xml
+++ b/app/src/main/res/menu/code_editor_menu.xml
@@ -37,12 +37,12 @@
                 <menu>
                     <item android:id="@+id/fontType_fira" android:title="Fira">
                     </item>
-                    <item android:id="@+id/fontType_sourceCodePro"
-                        android:title="Source Code"></item>
                     <item android:id="@+id/fontType_kalam" android:title="Kalam">
                     </item>
                     <item android:id="@+id/fontType_ubuntu"
                         android:title="Ubuntu"></item>
+                    <item android:id="@+id/fontType_sourceCodePro"
+                        android:title="Source Code"></item>
                 </menu>
             </item>
             <item android:id="@+id/action_fontSizeChange"
@@ -51,7 +51,7 @@
                 <menu>
                     <item android:id="@+id/fontSize_small" android:title="Small">
                     </item>
-                    <item android:id="@+id/fontSize_big" android:title="Large">
+                    <item android:id="@+id/fontSize_big" android:title="Big">
                     </item>
                 </menu>
             </item>
